# protocol

./: README.md
client/: Cargo.toml
client/src/: client.rs  client_io.rs  lib.rs  table.rs
icd/: Cargo.toml
icd/src/: arbitrator.rs  component.rs  lib.rs
server/: Cargo.toml
server/src/: lib.rs
