[package]
name = "anachro-client"
version = "0.2.0"
description = "The Client Library for the Anachro Network Protocol"
repository = "https://github.com/anachro-rs/protocol"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
readme = "README.md"

categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

[dependencies]
anachro-icd = { version = "0.2.0", path = "../icd" }
postcard = "0.7.2"

[dependencies.defmt]
version = "0.3.0"
optional = true

[dependencies.serde]
version = "1.0.114"
default-features = false
features = ["derive"]

