[package]
name = "anachro-icd"
version = "0.2.0"
description = "The Interface Control Document for Anachro Network Protocol"
repository = "https://github.com/jamesmunns/anachro"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
readme = "README.md"

categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

[dependencies]
heapless = "0.7.8"

[dependencies.serde]
version = "1.0.114"
default-features = false
features = ["derive"]

[dev-dependencies.postcard]
version = "0.7.2"
default-features = false

[features]
std = ["postcard/use-std"]
