[package]
name = "anachro-icd"
version = "0.2.0"
description = "The Interface Control Document for Anachro Network Protocol"
repository = "https://github.com/anachro-rs/protocol"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
readme = "README.md"

categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

[dependencies.toml-cfg]
version = "0.1.2"
path = "/home/james/personal/toml-cfg"

[dependencies.defmt]
version = "0.3.0"
optional = true

[dependencies.heapless]
version = "0.7.8"
features = ["defmt-impl"]

[dependencies.byte-slab]
version = "0.2.2"
default-features = false
features = ["defmt"]
# TODO: How to activate defmt features conditionally?
# For now, the client needs to activate the defmt feature
# if they want it

[dependencies.byte-slab-derive]
version = "0.2.1"

[dependencies.serde]
version = "1.0.114"
default-features = false
features = ["derive"]

[dev-dependencies.postcard]
version = "0.7.2"
default-features = false

[features]
std = ["postcard/use-std"]

[patch.crates-io.toml-cfg]
path = "/home/james/personal/toml-cfg"
